Add commerce_product dependency to commerce_generate

--- a/modules/commerce_generate/commerce_generate.info.yml
+++ b/modules/commerce_generate/commerce_generate.info.yml
@@ -7,5 +7,6 @@ tags:
  - developer
 dependencies:
  - drupal:commerce_bulk
+ - drupal:commerce_product
  - drupal:devel_generate
  - drupal:readmehelp
