--- a/commerce_bulk.info.yml
+++ b/commerce_bulk.info.yml
@@ -15,6 +15,7 @@ config_devel:
     - system.action.commerce_bulk_variation_priceset
     - system.action.commerce_bulk_variation_sku
     - system.action.commerce_bulk_variation_status
+    - system.action.commerce_bulk_variation_title
     - system.action.commerce_bulk_variation_top
     - system.action.commerce_bulk_variation_zdelete
     - views.view.commerce_bulk_variations_tab
