--- a/commerce_bulk.info.yml
+++ b/commerce_bulk.info.yml
@@ -18,4 +18,8 @@ config_devel:
     - system.action.commerce_bulk_variation_title
     - system.action.commerce_bulk_variation_top
     - system.action.commerce_bulk_variation_zdelete
+    - system.action.commerce_bulk_attribute_value_top
+    - system.action.commerce_bulk_attribute_value_name
+    - system.action.commerce_bulk_attribute_value_zdelete
+    - views.view.commerce_bulk_attributes
     - views.view.commerce_bulk_variations_tab
