Issue #3043365: Some mandatory parameters are missing ('id')

--- a/config/install/views.view.commerce_bulk_attributes.yml
+++ b/config/install/views.view.commerce_bulk_attributes.yml
@@ -452,7 +452,7 @@ display:
         style: true
         row: true
         sorts: true
-      path: admin/commerce-bulk-attribute/%id
+      path: admin/commerce-bulk-attribute/%commerce_product_attribute
       menu:
         type: none
         title: Xattribute
