--- a/config/install/views.view.commerce_bulk_variations_tab.yml
+++ b/config/install/views.view.commerce_bulk_variations_tab.yml
@@ -12,7 +12,6 @@ description: ''
 tag: ''
 base_table: commerce_product_field_data
 base_field: product_id
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -78,61 +77,17 @@ display:
           summary: ''
           description: ''
           columns:
-            commerce_product_variation_bulk_form: commerce_product_variation_bulk_form
-            sku: sku
-            title_1: title_1
-            price__number: price__number
-            list_price__number: list_price__number
-            status: status
-            operations: operations
+            title: title
           info:
-            commerce_product_variation_bulk_form:
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            sku:
-              sortable: true
+            title:
+              sortable: false
               default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            title_1:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            price__number:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            list_price__number:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            status:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            operations:
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
           default: '-1'
-          empty_table: true
+          empty_table: false
       row:
         type: fields
       fields:
@@ -140,7 +95,7 @@ display:
           id: commerce_product_variation_bulk_form
           table: commerce_product_variation
           field: commerce_product_variation_bulk_form
-          relationship: variations
+          relationship: variations_target_id
           group_type: group
           admin_label: ''
           label: 'Bulk update'
@@ -184,7 +139,7 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          action_title: Action
+          action_title: 'Bulk update'
           include_exclude: exclude
           selected_actions: {  }
           entity_type: commerce_product_variation
@@ -193,7 +148,7 @@ display:
           id: sku
           table: commerce_product_variation_field_data
           field: sku
-          relationship: variations
+          relationship: variations_target_id
           group_type: group
           admin_label: ''
           label: SKU
@@ -229,7 +184,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -254,11 +209,11 @@ display:
           entity_type: commerce_product_variation
           entity_field: sku
           plugin_id: field
-        title_1:
-          id: title_1
+        title:
+          id: title
           table: commerce_product_variation_field_data
           field: title
-          relationship: variations
+          relationship: variations_target_id
           group_type: group
           admin_label: ''
           label: Title
@@ -294,7 +249,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -323,7 +278,7 @@ display:
           id: price__number
           table: commerce_product_variation_field_data
           field: price__number
-          relationship: variations
+          relationship: variations_target_id
           group_type: group
           admin_label: ''
           label: UPrice
@@ -359,7 +314,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -389,7 +344,7 @@ display:
           id: list_price__number
           table: commerce_product_variation_field_data
           field: list_price__number
-          relationship: variations
+          relationship: variations_target_id
           group_type: group
           admin_label: ''
           label: LPrice
@@ -455,7 +410,7 @@ display:
           id: status
           table: commerce_product_variation_field_data
           field: status
-          relationship: variations
+          relationship: variations_target_id
           group_type: group
           admin_label: ''
           label: Status
@@ -491,7 +446,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -522,7 +477,7 @@ display:
           id: operations
           table: commerce_product_variation
           field: operations
-          relationship: variations
+          relationship: variations_target_id
           group_type: group
           admin_label: ''
           label: Operations
@@ -569,25 +524,117 @@ display:
           destination: false
           entity_type: commerce_product_variation
           plugin_id: entity_operations
-      filters: {  }
+      filters:
+        sku:
+          id: sku
+          table: commerce_product_variation_field_data
+          field: sku
+          relationship: variations_target_id
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: sku_op
+            label: 'Filter by SKU'
+            description: 'Enter a part of a variation SKU.'
+            use_operator: false
+            operator: sku_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: variation_sku
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              commerce_marketplace_admin: '0'
+              commerce_marketplace_owner: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: commerce_product_variation
+          entity_field: sku
+          plugin_id: string
+        title:
+          id: title
+          table: commerce_product_variation_field_data
+          field: title
+          relationship: variations_target_id
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: title_op
+            label: 'Filter by Title'
+            description: 'Enter a part of a variation title.'
+            use_operator: false
+            operator: title_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: variation_title
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              commerce_marketplace_admin: '0'
+              commerce_marketplace_owner: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: commerce_product_variation
+          entity_field: title
+          plugin_id: string
       sorts: {  }
-      title: 'Variations Tab'
+      title: Xproduct
       header: {  }
       footer: {  }
       empty: {  }
       relationships:
-        variations:
-          id: variations
+        variations_target_id:
+          id: variations_target_id
           table: commerce_product__variations
-          field: variations
+          field: variations_target_id
           relationship: none
           group_type: group
-          admin_label: 'variations: Product variation'
+          admin_label: 'Product variation'
           required: true
+          entity_type: commerce_product
+          entity_field: variations
           plugin_id: standard
       arguments:
-        product_id_1:
-          id: product_id_1
+        product_id:
+          id: product_id
           table: commerce_product_field_data
           field: product_id
           relationship: none
@@ -629,7 +676,8 @@ display:
       display_extenders: {  }
       filter_groups:
         operator: AND
-        groups: {  }
+        groups:
+          1: AND
     cache_metadata:
       max-age: 0
       contexts:
