Issue #3121299 by sarvjeetsingh, Neslee Canil Pinto, j3ll3nl: Compatibility with Drupal 9

--- a/commerce_bulk.info.yml
+++ b/commerce_bulk.info.yml
@@ -2,6 +2,7 @@ name: 'Commerce Bulk'
 type: module
 description: 'Provides a service for bulk creation of Drupal Commerce entities.'
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Commerce (contrib)'
 dependencies:
   - 'commerce:commerce_order'
